--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>tracer-test/logback-test</module>
         <module>tracer-test/log4j2-test</module>
         <module>tracer-test/log4j-test</module>
+        <module>sofa-tracer-plugins/sofa-tracer-dubbo-common-plugin</module>
     </modules>
 
     <properties>
