Support spring message for rocketmq (#315)
* support mq

--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,15 @@
         <module>sofa-tracer-plugins/sofa-tracer-flexible-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-dubbo-2.6.x-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-mongodb-plugin</module>
+        <module>sofa-tracer-plugins/sofa-tracer-springmessage-plugin</module>
+        <module>sofa-tracer-plugins/sofa-tracer-rocketmq-plugin</module>
+        <module>sofa-tracer-plugins/sofa-tracer-dubbo-common-plugin</module>
         <module>tracer-all</module>
         <module>tracer-sofa-boot-starter</module>
         <module>tracer-test/core-test</module>
         <module>tracer-test/logback-test</module>
         <module>tracer-test/log4j2-test</module>
         <module>tracer-test/log4j-test</module>
-        <module>sofa-tracer-plugins/sofa-tracer-dubbo-common-plugin</module>
     </modules>
 
     <properties>
@@ -149,6 +151,16 @@
             </dependency>
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
+                <artifactId>sofa-tracer-springmessage-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alipay.sofa</groupId>
+                <artifactId>sofa-tracer-rocketmq-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alipay.sofa</groupId>
                 <artifactId>tracer-all</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -184,6 +196,19 @@
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>2.1.0.RELEASE</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-stream</artifactId>
+                <version>2.1.0.RELEASE</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>4.4.0</version>
             </dependency>
 
             <!-- 对外部框架的一些插件使用 -->
