--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>sofa-tracer-plugins/sofa-tracer-resttmplate-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-flexible-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-dubbo-2.6.x-plugin</module>
+        <module>sofa-tracer-plugins/sofa-tracer-redis-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-mongodb-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-springmessage-plugin</module>
         <module>sofa-tracer-plugins/sofa-tracer-rocketmq-plugin</module>
@@ -43,8 +44,9 @@
 
     <properties>
         <opentracing.version>0.22.0</opentracing.version>
-        <java.compiler.source.version>1.8</java.compiler.source.version>
+        <sofa.tracer.version>3.1.0-SNAPSHOT</sofa.tracer.version>
         <java.compiler.target.version>1.8</java.compiler.target.version>
+        <java.compiler.source.version>1.8</java.compiler.source.version>
         <jmh.version>1.9.3</jmh.version>
         <project.encoding>UTF-8</project.encoding>
         <main.user.dir>${user.dir}</main.user.dir>
@@ -169,6 +171,11 @@
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
                 <artifactId>sofa-tracer-kafkamq-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alipay.sofa</groupId>
+                <artifactId>sofa-tracer-redis-plugin</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
