--- a/tracer-core/pom.xml
+++ b/tracer-core/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>opentracing-util</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alipay.sofa.common</groupId>
+            <artifactId>sofa-common-tools</artifactId>
+        </dependency>
+
         <!-- test 依赖 -->
         <dependency>
             <groupId>org.jmockit</groupId>
