--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
                 <version>4.4.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alipay.sofa.common</groupId>
+                <artifactId>sofa-common-tools</artifactId>
+                <version>1.3.0</version>
+            </dependency>
+
             <!-- 对外部框架的一些插件使用 -->
             <dependency>
                 <groupId>javax.servlet</groupId>
