--- a/pom.xml
+++ b/pom.xml
@@ -423,6 +423,7 @@
                         <format>xml</format>
                         <format>html</format>
                     </formats>
+                    <check />
                 </configuration>
             </plugin>
             <plugin>
