fix_process_tags

--- a/sofa-tracer-plugins/sofa-tracer-jaeger-plugin/src/test/resources/sofa.tracer.properties
+++ b/sofa-tracer-plugins/sofa-tracer-jaeger-plugin/src/test/resources/sofa.tracer.properties
@@ -1,4 +1,12 @@
-com.alipay.sofa.tracer.jaeger.agent.enabled=true
-com.alipay.sofa.tracer.jaeger.agent.host=127.0.0.1
-com.alipay.sofa.tracer.jaeger.agent.port=6831
-com.alipay.sofa.tracer.jaeger.agent.maxPacketSize=0
+#com.alipay.sofa.tracer.jaeger.agent.enabled=true
+#com.alipay.sofa.tracer.jaeger.agent.host=127.0.0.1
+#com.alipay.sofa.tracer.jaeger.agent.port=6831
+#com.alipay.sofa.tracer.jaeger.agent.maxPacketSize=0
+
+com.alipay.sofa.tracer.zipkin.enabled=true
+com.alipay.sofa.tracer.zipkin.baseUrl=http://localhost:9411
+com.alipay.sofa.tracer.zipkin.gzipped=true
+
+com.alipay.sofa.tracer.jaeger.agent.flushInterval=200
+com.alipay.sofa.tracer.jaeger.agent.maxQueueSize=200
+com.alipay.sofa.tracer.jaeger.agent.closeEnqueueTimeout=2000
